# vibe-driven-assistant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  models.yaml  models.yaml.example  pyproject.toml  tasks.md
.github/workflows/: iterate-pr.yml  review-pr.yml  solve-issue.yml
scripts/: backfill_graph.py
src/coding_agent/: __init__.py  ci_waiter.py  cli.py  config.py  github_app.py  server.py
src/coding_agent/agents/: agentic_agent.py  console_callback.py
src/coding_agent/code_indexer/: __init__.py  cli.py  models.py  summarizer.py  tools.py
src/coding_agent/code_indexer/graph/: builder.py  query.py  storage.py
src/coding_agent/code_indexer/parser/: ast_parser.py  base_parser.py  go_parser.py  javascript_parser.py  llm_parser.py  registry.py  resolver.py  rust_parser.py
src/coding_agent/models/: agent_schemas.py  schemas.py
src/coding_agent/prompts/: prompt_layer.py
src/coding_agent/prompts/templates/: agentic_system.txt  reviewer_system.txt
src/coding_agent/rag/: __init__.py  chunker.py  cli.py  config.py  embeddings.py  indexer.py  stores.py  tools.py
src/coding_agent/services/: file_service.py  github_service.py  llm_service.py  local_service.py  repo_manager.py
src/coding_agent/tools/: __init__.py  base_tools.py  indexer_tools.py
tests/: test_agents_model_config.py  test_basic.py  test_go_parser.py  test_grep.py  test_javascript_parser.py  test_model_config.py  test_parser_registry.py  test_rust_parser.py
tests/fixtures/: sample.go  sample.js  sample.rs  sample.ts
